[package]
name = "privacy_backend"
version = "0.1.0"
authors = ["Dario Bartussek <d.bartussek@gmail.com>"]
edition = "2018"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
ron = "0.5"

async-std = "1.5"
futures = { version = "0.3", features = ["thread-pool"] }

async-tungstenite = "0.4"
tungstenite = "0.10"

log = "0.4"
env_logger = "0.7"

rand = "0.7"

walkdir = "2.3"
